# liscio

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.zh.md
cmake/: liscio-config.cmake.in  sync_results.sh
include/liscio/: liscio.h
results/: README.md  README.zh.md
results/data/: metrics.csv  metrics_g1.csv
src/: liscio.c  liscio_arc9d.c  liscio_bezier9.c  liscio_bspline9.c  liscio_helix9.c  liscio_internal.h  liscio_rbezier.c
test/: .gitignore  geomdl_fit.py  ngc_parser.c  ngc_parser.h  plot_fit.py  sweep_tol.sh  test_arc_fit.c  test_arc_merge.c  test_benchmark.c  test_bezier_fit.c  test_bspline.c  test_compare.c  test_dump_csv.c  test_fuzz.c  test_helix_fit.c  test_metrics.c  test_ngc_replay.c  test_rbezier.c  test_timing.h  test_verify.c  test_xcompare.c
test/data/: 130207LZW.NGC  1_1001.ngc  2_1001.ngc  3_1001.ngc  4_1001.ngc  5_1001.ngc  6_1001.ngc  SER-40.ngc  bto45.ngc  flower-one-line.ngc  flower.ngc  luca-long-reverse.ngc  rechteck-10x10-45.ngc  rechteck-10x10.ngc  sine_test.ngc  thomam.ngc  thomam.ngc.input.csv  thomam.ngc.prims.csv  thomam.ngc.rapids.csv  yy-g61.ngc  yy.ngc
tool/: README.md  README.zh.md  liscio_compress.c
